# ModernCPlusPlusDemo

./: .clang-tidy  .gitattributes  .gitmodules  Attribute_8hpp.html  Attribute_8hpp_source.html  CMakeLists.txt  Camera_8cpp.html  Camera_8hpp.html  Camera_8hpp_source.html  DataSourceMock_8hpp.html  DataSourceMock_8hpp_source.html  DataSource_8cpp.html  DataSource_8hpp.html  DataSource_8hpp_source.html  Dockerfile  Doxyfile  EventBus_8hpp.html  EventBus_8hpp_source.html  Event_8hpp.html  Event_8hpp_source.html  IDataSource_8hpp.html  IDataSource_8hpp_source.html  ILogger_8cpp.html  ILogger_8hpp.html  ILogger_8hpp_source.html  LICENSE  ObjectFactory_8hpp.html  ObjectFactory_8hpp_source.html  Observer_8hpp.html  Observer_8hpp_source.html  OpenCLWrapper_8cpp.html  OpenCLWrapper_8hpp.html  OpenCLWrapper_8hpp_source.html  README.md  README_8md.html  SPDLogEx_8cpp.html  SPDLogEx_8hpp.html  SPDLogEx_8hpp_source.html  Singleton_8hpp.html  Singleton_8hpp_source.html  (+199 more)
.github/workflows/: code-quality.yml  cpp-cd.yml  cpp-ci.yml
DesignModes/: CMakeLists.txt  EventBus.hpp  ObjectFactory.hpp  Observer.hpp  Singleton.hpp
MathFunctions/: CMakeLists.txt  MathFunctions.cpp  MathFunctions.hpp
OpenCL/: CMakeLists.txt  OpenCLWrapper.cpp  OpenCLWrapper.hpp
SPDLogEx/: CMakeLists.txt  ILogger.cpp  ILogger.hpp  SPDLogEx.cpp  SPDLogEx.hpp
Singleton/: Singleton.hpp
StateCharts/: CMakeLists.txt  Camera.cpp  Camera.hpp  DataSource.cpp  DataSource.hpp  IDataSource.hpp
StateMachine/: CMakeLists.txt  StateMachine.hpp
Subscriber/: Attribute.hpp  CMakeLists.txt  Event.hpp  Subscriber.hpp  ThreadPoolInvokeStrategy.hpp
TemplateClassDemo/: TemplateClassDemo.hpp
Test/: DataSourceMock.hpp  SubscriberTest.cpp  SubscriberTest.hpp  TestCamera.cpp  TestCamera.hpp
ThreadPool/: CMakeLists.txt  ThreadPool.hpp
kernels/: vector_add.cl
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_2a.js  all_2b.js  all_2c.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  (+93 more)
